--- a/machine_learning_course.ipynb
+++ b/machine_learning_course.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "machine_learning_course.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMOX+gTy3FR6I8qz9IyJlJW"
+      "authorship_tag": "ABX9TyMOX+gTy3FR6I8qz9IyJlJW",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +14,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/gist/algeriarocker/57e99fc6c8a7e1fdc29a35bed4b85b7f/machine_learning_course.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
